// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HousingStatusField /> matches snapshot 1`] = `
<select
  class="sc-crzoUp fPuniV"
  id="housingStatusField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="propety"
  >
    mieszkanie własne
  </option>
  <option
    value="with_parent"
  >
    mieszkanie rodziców
  </option>
  <option
    value="rental"
  >
    mieszkanie wynajmowane
  </option>
  <option
    value="room"
  >
    pokój
  </option>
</select>
`;

exports[`<HousingStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <select
        class="sc-crzoUp cfXqdc"
        id="housingStatusField"
        label="Test"
        name="name"
        required=""
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz *
        </option>
        <option
          value="propety"
        >
          mieszkanie własne
        </option>
        <option
          value="with_parent"
        >
          mieszkanie rodziców
        </option>
        <option
          value="rental"
        >
          mieszkanie wynajmowane
        </option>
        <option
          value="room"
        >
          pokój
        </option>
      </select>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<HousingStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <select
        class="sc-crzoUp fPuniV"
        id="housingStatusField"
        label="Test"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="propety"
        >
          mieszkanie własne
        </option>
        <option
          value="with_parent"
        >
          mieszkanie rodziców
        </option>
        <option
          value="rental"
        >
          mieszkanie wynajmowane
        </option>
        <option
          value="room"
        >
          pokój
        </option>
      </select>
    </div>
  </form>
</div>
`;

exports[`<HousingStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <select
        class="sc-crzoUp cfXqdc"
        id="housingStatusField"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="propety"
        >
          mieszkanie własne
        </option>
        <option
          value="with_parent"
        >
          mieszkanie rodziców
        </option>
        <option
          value="rental"
        >
          mieszkanie wynajmowane
        </option>
        <option
          value="room"
        >
          pokój
        </option>
      </select>
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
